--- a/app/src/main/res/layout/language_selector.xml
+++ b/app/src/main/res/layout/language_selector.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/tv_from"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -12,7 +14,9 @@
         android:text="@string/from"
         android:textAllCaps="false"
         android:textColor="@color/gray"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <Spinner
         android:id="@+id/from_language"
@@ -24,18 +28,28 @@
         android:layout_marginEnd="12dp"
         android:textAlignment="textStart"
         android:background="@color/light_gray"
-        android:hint="@string/languages"/>
+        android:hint="@string/languages"
+        app:layout_constraintTop_toBottomOf="@+id/tv_from"
+        app:layout_constraintStart_toStartOf="parent"/>
 
-    <Button
+    <ImageButton
         android:id="@+id/swap"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:contentDescription="@string/swap"
-        android:background="@drawable/ic_baseline_swap_vert_24"/>
+        android:padding="15dp"
+        android:src="@drawable/ic_baseline_swap_vert_24"
+        app:layout_constraintTop_toBottomOf="@+id/from_language"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/tv_to"/>
 
     <TextView
+        android:id="@+id/tv_to"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -43,7 +57,10 @@
         android:text="@string/to"
         android:textAllCaps="false"
         android:textColor="@color/gray"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@id/tv_to"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/to_language"/>
 
     <Spinner
         android:id="@+id/to_language"
@@ -55,6 +72,8 @@
         android:layout_marginEnd="12dp"
         android:background="@color/light_gray"
         android:textAlignment="textStart"
-        android:hint="@string/languages"/>
+        android:hint="@string/languages"
+        app:layout_constraintTop_toBottomOf="@+id/tv_to"
+        app:layout_constraintStart_toStartOf="parent"/>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
