--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/turn_on_menu_item"
+        android:id="@+id/open_accessibility_item"
         app:showAsAction="never"
         android:contentDescription="@string/turn_on_content_description"
-        android:title="@string/turn_on"/>
+        android:title="@string/open_accessibility"/>
 
     <item
         android:id="@+id/about_menu_item"
