--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Theme.FlashTranslator" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="Theme.LaTranslator" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/bright_coast</item>
         <item name="colorPrimaryVariant">@color/gray_sea</item>
