--- a/app/src/main/res/xml/accessibility.xml
+++ b/app/src/main/res/xml/accessibility.xml
@@ -4,5 +4,5 @@
     android:accessibilityFeedbackType="feedbackSpoken"
     android:notificationTimeout="100"
     android:canRetrieveWindowContent="true"
-    android:settingsActivity="com.example.dicthelper.MainActivity"
+    android:settingsActivity="com.example.latranslator.MainActivity"
     />
