--- a/app/src/main/res/layout/fragment_translator.xml
+++ b/app/src/main/res/layout/fragment_translator.xml
@@ -105,7 +105,7 @@
             android:id="@+id/open_accessibility_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/gray"
+            android:backgroundTint="@color/gray_sea"
             android:layout_marginTop="5dp"
             android:text="@string/turn_on"
             android:layout_gravity="center"/>
