--- a/app/src/main/res/drawable/shape_round.xml
+++ b/app/src/main/res/drawable/shape_round.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient android:startColor="@color/white"
-        android:endColor="@color/white"
-        android:angle="300" />
+    <solid android:color="@color/white" android:angle="300" />
     <corners android:radius="10dp" />
     <stroke android:width="3px" android:color="#000000" />
 </shape>
