--- a/app/src/main/res/layout/translation_layout.xml
+++ b/app/src/main/res/layout/translation_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@drawable/shape_round">
 
     <TextView
@@ -11,7 +11,7 @@
         android:focusable="true"
         android:layout_gravity="center"
         android:layout_margin="7dp"
-        android:text="@string/languages"
+        android:text="@string/translation"
         android:textSize="17sp"/>
 
 </FrameLayout>
