--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -62,7 +62,8 @@
         android:id="@+id/seek_bar_text_size"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:max="75"
+        android:min="10"
+        android:max="50"
         android:layout_marginTop="10dp"
         android:layout_marginHorizontal="5dp"
         app:layout_constraintStart_toStartOf="parent"
