--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -103,7 +103,7 @@
         app:layout_constraintTop_toBottomOf="@id/button_background_color"/>
 
     <Button
-        android:id="@+id/button_text_color"
+        android:id="@+id/button_frame_text_color"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
