--- a/app/src/main/res/layout/translation_layout.xml
+++ b/app/src/main/res/layout/translation_layout.xml
@@ -8,7 +8,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:focusable="true"
-        android:layout_gravity="center"
+        android:gravity="center"
+        android:layout_gravity="start"
         android:layout_margin="7dp"
         android:text="@string/translation"
         android:textSize="17sp"/>
