--- a/app/src/main/res/drawable/shape_circle.xml
+++ b/app/src/main/res/drawable/shape_circle.xml
@@ -1,10 +1,10 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/gray_sea">
+    android:color="@color/gray_light">
     <item>
         <layer-list>
             <item>
                 <shape android:shape="oval">
-                    <solid android:color="@color/white" />
+                    <solid android:color="@color/background_contrast" />
                     <corners android:radius="1dp" />
                     <stroke
                         android:width="0.5dp"
