--- a/app/src/main/res/drawable/spinner_dropdown_item_shape.xml
+++ b/app/src/main/res/drawable/spinner_dropdown_item_shape.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ripple android:color="@color/gray_sea"
+<ripple android:color="@color/gray_light"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
     <layer-list>
         <item>
             <shape android:shape="rectangle">
-                <gradient android:startColor="@color/white"
-                    android:endColor="@color/white"
+                <gradient android:startColor="@color/background_contrast"
+                    android:endColor="@color/background_contrast"
                     android:angle="300" />
                 <corners android:radius="3dp" />
                 <stroke android:width="1px" android:color="#000000" />
