--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="bright_coast">#7ED6FF</color>
-    <color name="deep_gray_blue">#53586A</color>
-    <color name="gray_sea">#98A0D6</color>
+    <color name="deep_gray">#53586A</color>
+    <color name="deep_gray_blue">#3F455A</color>
+    <color name="gray_light">#98A0D6</color>
+    <color name="blue_sea">#57609F</color>
+    <color name="blue_sign">#4A6DAF</color>
     <color name="gray">#A1A1A1</color>
     <color name="light_coast">#B3C5FF</color>
     <color name="main_gray">#5D5C68</color>
-    <color name="light_gray">#F3F3F3</color>
+    <color name="background_contrast">#F3F3F3</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
